--- a/index.html
+++ b/index.html
@@ -21,11 +21,20 @@
     .logo {
       font-size: 2em;
       font-weight: bold;
-      color: #f9c70b; /* charity: water yellow */
+      color: #f9c70b;
     }
     .subtitle {
       font-size: 1.2em;
       margin: 10px 0;
+    }
+    .instructions {
+      font-size: 0.95em;
+      margin: 15px;
+      background-color: #fff3cd;
+      padding: 10px;
+      border-left: 5px solid #ffeeba;
+      display: inline-block;
+      text-align: left;
     }
     .btn {
       display: inline-block;
@@ -66,7 +75,8 @@
       bottom: 0;
       left: 10px;
     }
-    .obstacle, .water-drop {
+    .obstacle,
+    .water-drop {
       position: absolute;
       bottom: 0;
     }
@@ -89,24 +99,25 @@
 </head>
 <body>
   <header>
-    <div class="logo">❁ WATER QUEST
-    </div>
+    <div class="logo">❁ WATER QUEST</div>
     <div class="subtitle">The Journey to Clean Water</div>
     <button class="btn" onclick="startGame()">Start</button>
     <button class="btn" onclick="alert('Learn more at charitywater.org')">About the Mission</button>
     <div style="font-size: 0.8em; margin-top: 10px;">Inspired by charity: water</div>
   </header>
 
+  <div class="instructions">
+    <strong>How to Play:</strong><br>
+    • Press "Start" to begin the game<br>
+    • Use the <strong>Left (←)</strong> and <strong>Right (→)</strong> arrow keys to move the player<br>
+    • Collect the blue water drops to gain points<br>
+    • You have 30 seconds to collect as much water as you can!
+  </div>
+
   <div class="upgrades">
-    <div class="upgrade-box">
-      ✔ New Well
-    </div>
-    <div class="upgrade-box">
-      ✔ Water Filter
-    </div>
-    <div class="upgrade-box">
-      ✔ Sanitation Station
-    </div>
+    <div class="upgrade-box">✔ New Well</div>
+    <div class="upgrade-box">✔ Water Filter</div>
+    <div class="upgrade-box">✔ Sanitation Station</div>
   </div>
 
   <div class="game-screen" id="gameScreen">
@@ -120,9 +131,89 @@
   </footer>
 
   <script>
+    let score = 0;
+    let player;
+    let water;
+    let scoreDisplay;
+    let timerDisplay;
+    let timer;
+    let timeLeft = 30;
+
     function startGame() {
       document.getElementById('gameScreen').style.display = 'block';
+      player = document.getElementById('player');
+      water = document.getElementById('water');
+
+      score = 0;
+      timeLeft = 30;
+
+      // Add score display
+      scoreDisplay = document.createElement('div');
+      scoreDisplay.style.position = 'absolute';
+      scoreDisplay.style.top = '10px';
+      scoreDisplay.style.right = '10px';
+      scoreDisplay.style.fontSize = '1.2em';
+      scoreDisplay.style.backgroundColor = '#fff';
+      scoreDisplay.style.padding = '5px 10px';
+      scoreDisplay.style.borderRadius = '8px';
+      scoreDisplay.innerText = `Score: ${score}`;
+      document.getElementById('gameScreen').appendChild(scoreDisplay);
+
+      // Add timer display
+      timerDisplay = document.createElement('div');
+      timerDisplay.style.position = 'absolute';
+      timerDisplay.style.top = '10px';
+      timerDisplay.style.left = '10px';
+      timerDisplay.style.fontSize = '1.2em';
+      timerDisplay.style.backgroundColor = '#fff';
+      timerDisplay.style.padding = '5px 10px';
+      timerDisplay.style.borderRadius = '8px';
+      timerDisplay.innerText = `Time: ${timeLeft}`;
+      document.getElementById('gameScreen').appendChild(timerDisplay);
+
+      document.addEventListener('keydown', movePlayer);
+      timer = setInterval(updateTimer, 1000);
+    }
+
+    function updateTimer() {
+      timeLeft--;
+      timerDisplay.innerText = `Time: ${timeLeft}`;
+
+      if (timeLeft <= 0) {
+        clearInterval(timer);
+        document.removeEventListener('keydown', movePlayer);
+        alert(`Time's up! Your final score is: ${score}`);
+      }
+    }
+
+    function movePlayer(e) {
+      const left = parseInt(window.getComputedStyle(player).left);
+      if (e.key === 'ArrowRight' && left < 370) {
+        player.style.left = left + 10 + 'px';
+      } else if (e.key === 'ArrowLeft' && left > 0) {
+        player.style.left = left - 10 + 'px';
+      }
+
+      checkCollision();
+    }
+
+    function checkCollision() {
+      const playerRect = player.getBoundingClientRect();
+      const waterRect = water.getBoundingClientRect();
+
+      if (
+        playerRect.left < waterRect.right &&
+        playerRect.right > waterRect.left &&
+        playerRect.top < waterRect.bottom &&
+        playerRect.bottom > waterRect.top
+      ) {
+        score += 10;
+        scoreDisplay.innerText = `Score: ${score}`;
+        const newLeft = Math.floor(Math.random() * 360) + 'px';
+        water.style.left = newLeft;
+      }
     }
   </script>
 </body>
 </html>
+
