moved score and timer

--- a/index.html
+++ b/index.html
@@ -167,5 +167,6 @@
   <footer>
     “1 in 10 people lack access to clean water...”
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
