--- a/index.html
+++ b/index.html
@@ -4,142 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Water Quest</title>
-  <style>
-    .cloud {
-      position: absolute;
-      top: 0;
-      opacity: 0.95;
-      pointer-events: none;
-      z-index: 2;
-      filter: brightness(100%);
-    }
-    .cloud.left {
-      left: 10px;
-      width: 80px;
-    }
-    .cloud.right {
-      right: 10px;
-      width: 100px;
-    }
-
-    body {
-      font-family: 'Trebuchet MS', 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: url('https://cdn.pixabay.com/photo/2017/10/18/21/04/africa-2869266_1280.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #333;
-      text-align: center;
-    }
-    header {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 20px;
-      border-bottom: 2px solid #ddd;
-    }
-    .logo {
-      font-size: 2em;
-      font-weight: bold;
-      color: #f9c70b;
-    }
-    .subtitle {
-      font-size: 1.2em;
-      margin: 10px 0;
-    }
-    .message {
-      font-size: 1em;
-      margin: 20px auto;
-      padding: 10px;
-      background-color: #e6f7ff;
-      border-left: 5px solid #91d5ff;
-      display: block;
-      min-height: 40px;
-      max-width: 500px;
-    }
-    .btn {
-      display: inline-block;
-      margin: 10px;
-      padding: 10px 20px;
-      font-size: 1em;
-      background-color: #f9c70b;
-      color: #000;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .btn:hover {
-      background-color: #e8b309;
-    }
-    .upgrades {
-      margin: 20px;
-    }
-    .upgrade-box {
-      display: inline-block;
-      margin: 10px;
-      padding: 10px;
-      border: 2px solid #ccc;
-      border-radius: 8px;
-      background-color: rgba(255,255,255,0.8);
-    }
-    .game-screen {
-      display: none;
-      position: relative;
-      width: 350px;
-      height: 300px;
-      margin: 20px auto;
-      background-color: rgba(208,232,242,0.95);
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-    .player {
-      width: 40px;
-      height: 30px;
-      background-color: #444;
-      position: absolute;
-      bottom: 0;
-      left: 10px;
-      border-radius: 0 0 10px 10px;
-    }
-    .water-drop {
-      width: 20px;
-      height: 30px;
-      background-color: #00f;
-      border-radius: 50%;
-      position: absolute;
-      top: 0;
-    }
-    .instructions {
-      font-size: 1em;
-      margin: 20px auto;
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 15px;
-      border-left: 5px solid #ffe58f;
-      max-width: 500px;
-    }
-    .scoreboard {
-      margin: 10px auto;
-      font-size: 1.1em;
-      font-weight: bold;
-      background: #fff;
-      padding: 5px 15px;
-      border-radius: 8px;
-      max-width: 300px;
-    }
-    footer {
-      margin-top: 20px;
-      font-size: 0.9em;
-      background-color: rgba(255, 255, 255, 0.8);
-      padding: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="logo">❁ WATER QUEST</div>
     <div class="subtitle">The Journey to Clean Water</div>
     <button class="btn" onclick="startGame()">Start</button>
-    <button class="btn" onclick="alert('Learn more at charitywater.org')">About the Mission</button>
-    <div style="font-size: 0.8em; margin-top: 10px;"><strong>Inspired by charity: water</strong></div>
+    <button class="btn" onclick="window.location.reload()">Reset</button>
+    <div style="font-size: 0.8em; margin-top: 10px; display: flex; align-items: center; justify-content: center; flex-direction: column;">
+      <span style="display: flex; align-items: center;">
+        <strong>Inspired by charity: water</strong>
+        <img src="https://www.charitywater.org/favicon.ico" alt="charity: water logo" style="height: 20px; margin-left: 8px; vertical-align: middle;">
+      </span>
+      <a href="https://www.charitywater.org/home" target="_blank" style="color: #0077cc; text-decoration: underline; margin-top: 4px;">
+        Visit charity: water
+      </a>
+    </div>
   </header>
 
   <div id="messageBox" class="message">Welcome to Water Quest! Catch falling water with your bucket.</div>
