added theme and effects on game

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="subtitle">The Journey to Clean Water</div>
     <button class="btn" onclick="startGame()">Start</button>
     <button class="btn" onclick="window.location.reload()">Reset</button>
+    <button class="btn" id="muteBtn" style="margin-left:10px;">🔊 Mute</button>
     <div style="font-size: 0.8em; margin-top: 10px; display: flex; align-items: center; justify-content: center; flex-direction: column;">
       <span style="display: flex; align-items: center;">
         <strong>Inspired by charity: water</strong>
@@ -55,6 +56,7 @@
   </div>
 
   <audio id="catchSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_4c0f69779d.mp3"></audio>
+  <audio id="bgMusic" src="https://cdn.pixabay.com/audio/2022/10/16/audio_12b6b9e7e7.mp3" loop></audio>
 
   <footer>
   </footer>
