--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     </div>
   </header>
 
+  <div id="factBox" class="message" style="background:#fffbe6; color:#8c6d1f; border-left:5px solid #ffe58f; font-size:0.95em; margin-top:10px;">
+  </div>
+
   <div id="messageBox" class="message">Welcome to Water Quest! Catch falling water with your bucket.</div>
 
   <div id="gameScreen" class="game-screen">
@@ -56,7 +59,9 @@
   </div>
 
   <audio id="catchSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_4c0f69779d.mp3"></audio>
-  <audio id="bgMusic" src="https://cdn.pixabay.com/audio/2022/10/16/audio_12b6b9e7e7.mp3" loop></audio>
+  <audio id="bgMusic" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop></audio>
+
+  <button onclick="document.getElementById('bgMusic').play()">Play Music</button>
 
   <footer>
   </footer>
