--- a/index.html
+++ b/index.html
@@ -66,5 +66,6 @@
   <footer>
   </footer>
   <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html>
