updated the colors to be charity: water

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </header>
 
-  <div id="factBox" class="message" style="background:#fffbe6; color:#8c6d1f; border-left:5px solid #ffe58f; font-size:0.95em; margin-top:10px;">
+  <div id="factBox" class="message" style="background:#FEDBC1; color:#BF6C46; border-left:5px solid #FFC907; font-size:0.95em; margin-top:10px;">
   </div>
 
   <div id="messageBox" class="message">Welcome to Water Quest! Catch falling water with your bucket.</div>
